@@ -1,3 +1,4 @@
+* Improve loading strategy by using views
 * Use non conflicting keyboard shortcuts in sync with sao
 * Use the context to get the suffix of window name
 * Call on_change methods after setting default dtstart on calendar view
